# 0x

./: Cargo.toml  README.md
src/: calc.rs  color.rs  main.rs  render.rs
